--- a/config.yaml
+++ b/config.yaml
@@ -6,9 +6,10 @@ php_version: "7.2"
 webserver_type: nginx-fpm
 router_http_port: "80"
 router_https_port: "443"
-xdebug_enabled: false
+xdebug_enabled: true
 additional_hostnames: []
-additional_fqdns: []
+additional_fqdns: 
+  - ddev-warden-web
 nfs_mount_enabled: false
 provider: default
 use_dns_when_possible: true
